# diri-agent-toolbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml  publish.yml
scripts/: install.sh  local-ci.sh  pre-commit-check.sh
src/diri_agent_toolbox/: __init__.py  caching.py  calendar_api.py  confidence.py  contracts.py  crm.py  data.py  database.py  device.py  errors.py  files.py  http.py  langchain_adapter.py  logging.py  models.py  monitoring.py  processing.py  runner.py  streaming.py
tests/: test_caching.py  test_calendar_crm.py  test_confidence.py  test_contracts.py  test_data.py  test_database.py  test_device.py  test_files.py  test_http.py  test_logging.py  test_models.py  test_monitoring.py  test_processing.py  test_runner.py  test_streaming.py
